// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyLink displays statically as expected Snapshot of CopyLink is the same 1`] = `
<h1>
  Inner content
</h1>
`;

exports[`CopyLink displays statically as expected Snapshot of CopyLink with ID is the same 1`] = `
<div
  className="flex items-center"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex="0"
>
  <h1
    attribs={
      Object {
        "id": "example-id",
      }
    }
  >
    Inner content
  </h1>
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup is the same 1`] = `
<div
  className="sc-gsDKAQ bKboTo"
>
  Hover popup
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Failure is the same 1`] = `
<div
  className="sc-gsDKAQ bbXms"
>
  Failure
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Success is the same 1`] = `
<div
  className="sc-gsDKAQ fFaGcQ"
>
  Success
</div>
`;
